added wine images

--- a/src/app/components/wine-list/wine-list.template.html
+++ b/src/app/components/wine-list/wine-list.template.html
@@ -1,6 +1,5 @@
 <paper-card *ngFor="let wine of wines; let i=index"
-    >
-  <!--image="http://loremflickr.com/365/100/wine?random={{i}}"-->
+            image="assets/images/{{wine.type}}-wine-small.png">
   <div class="card-content">
     <div class="wine-header">
       {{wine.name}}
