--- a/src/app/components/wine-filter/filter-chip.styles.css
+++ b/src/app/components/wine-filter/filter-chip.styles.css
@@ -10,6 +10,7 @@
   width: 14px;
   height: 14px;
   fill: white;
+  color: white;
   background-color: #9e9e9e;
   border-radius: 9px;
   padding: 2px;
@@ -25,6 +26,7 @@
 :host > div:hover iron-icon {
   background-color: white;
   fill: #9e9e9e;
+  color: #9e9e9e;
 }
 
 :host .value {
