--- a/src/app/components/wine-filter/filter-chip.template.html
+++ b/src/app/components/wine-filter/filter-chip.template.html
@@ -1,4 +1,4 @@
 <div class="layout horizontal">
   <div class="flex"><span class="label">{{label}}</span>: <span class="value">{{value}}</span></div>
-  <iron-icon icon="close" (click)="onDelete.emit(true)"></iron-icon>
+  <iron-icon icon="close" (click)="onDeleteClicked()"></iron-icon>
 </div>
